Fixed an issue on small device screens where the footer content exceeded the size of the footer container.

--- a/production/www/css/footer.css
+++ b/production/www/css/footer.css
@@ -1,2 +1,2 @@
-html{position:relative;min-height:100%}body{margin-bottom:90px}#footer{position:absolute;height:90px;bottom:0;width:100%;background-color:#f8f8f8;padding-top:15px;padding-bottom:15px}#copyright{margin-top:5px}
+html{position:relative;min-height:100%;min-width:180px}body{margin-bottom:90px}#footer{position:absolute;height:90px;bottom:0;width:100%;background-color:#f8f8f8;padding-top:15px;padding-bottom:15px}#copyright{margin-top:5px}@media (max-width:300px){#rightsreserved{display:none}}
 /*# sourceMappingURL=maps/footer.css.map */
