--- a/source/www/css/footer.css
+++ b/source/www/css/footer.css
@@ -1,6 +1,7 @@
 html {
     position: relative;
     min-height: 100%;
+    min-width: 180px;
 }
 
 body {
@@ -19,4 +20,9 @@ body {
 
 #copyright {
     margin-top: 5px;
+}
+@media (max-width: 300px) {
+    #rightsreserved {
+        display: none;
+    }
 }
